# green-flow-agentic-building-energy-control

./: .dockerignore  .env.example  .gitignore  Caddyfile  Makefile  README.md  docker-compose.yml  mpc_perf_full.json  mpc_perf_full_policy_aware.json  pyproject.toml
backend/: Dockerfile
backend/greenflow/: __init__.py  cctv.py  config.py  datasets.py  db.py  energy_scope.py  replayclock.py  zone_naming.py  zone_redistribution.py
backend/tests/: conftest.py  test_agent_chat_trace.py  test_agent_plans.py  test_approvals_api.py  (+19 more)
data/: IDF_FILE.idf  README.md  greenflow_archetype.idf
db/: schema.sql
docs/: 3D View & Mapping IFC for Digital Twin Building.md  3_task_prompt.md  AGENT_LANGGRAPH_NGUYEN_LY.md  AGGREGATE_REDISTRIBUTION_HANDOFF_VI.md  AI_CHAT_API.md  CLAUDE_PROMPT_PREDICTIVE_MPC_PRECOMPUTE_VNPT.md  DEMAND_FORECAST_WIRING.md  DEPLOY.md  ELECTRICAL_DISTRIBUTION_TONG_QUAN_THONG_KE.md  GRAPH_RAG_NGUYEN_LY_VA_AGENT.md  GREENFLOW_CURRENT_ARCHITECTURE_GUIDE_VI.md  GREENFLOW_IMPLEMENTATION_GUIDE_VI.md  GREENFLOW_PREDICTIVE_MPC_AGENT_SYNC_SUGGESTIONS_VI.md  GREENFLOW_TRUE_BUILDING_DATA_SYNC_SUGGESTIONS_VI.md  GREENFLOW_TRUE_BUILDING_IMPLEMENTATION_SUMMARY_VI.md  GREENFLOW_UI_UX_SPEC.md  GreenFlow _ Agentic Digital Twin Platform for Energy-Efficient Building Operations.md  GreenFlow _ LangGraph Orchestration Blueprint.md  ML_FORECAST.md  PITCH_IMPACT_BUSINESS.md  TUTORIAL_MODE.md  WEEKLY_UPGRADE_SUMMARY_2026-06-21_TO_2026-06-28_VI.md  ZONE_ENERGY_DOUBLE_COUNT_REPORT_VI.md  ZONE_ENERGY_SCOPE_REVIEW_LIST.csv  ZONE_ENERGY_SCOPE_REVIEW_NOTES.md  ZONE_PHAN_CAP_TONG_HOP.md
scripts/: analyze_whatif_performance.py  annotate_cctv_yolo.py  build_3d_assets.py  build_3d_assets_ifc.py  build_electrical_kg.py  deploy_vm.sh  download_epw.py  gen_site_textures.py  load_real_data.py  load_real_into_demo.py  load_real_telemetry.py  load_weather.py  log_models_to_mlflow.py  precompute_predictive_whatif.py  reseed_device_2025.py  run_agent_variant.py  run_baseline.py  run_predictive_control_replay.py  seed_demo.py  seed_kb.py  sync_true_building_zones.py  train_forecast_lag.py  train_surrogate_real.py  upload_media.py  validate_true_building_sync.py  validate_whatif_cache.py
tools/: convert_xkt.mjs  package-lock.json  package.json  shot.mjs  shot_cdp.mjs  shot_cdp2.mjs  shot_landing.mjs  shot_loads.mjs  shot_refine.mjs  shot_scroll.mjs  test_slow.mjs  test_snap.mjs  verify_layers.mjs  verify_viewer.mjs
web/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+350 files in other folders)
