[project]
name = "greenflow"
version = "0.1.0"
description = "GreenFlow - agentic digital twin platform for energy-efficient building operations"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
    "pyyaml>=6.0",
    "fpdf2>=2.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "cryptography>=42.0",
    "turbovec>=0.1",
]

[project.optional-dependencies]
llm = [
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
]
ml = [
    # surrogate forecast (ml/forecast_service). Thiếu -> quick_estimate fallback rule.
    "lightgbm>=4.0",
    "numpy>=1.26",
    "pandas>=2.0",
]
embeddings = [
    "sentence-transformers>=3.0",  # bge-small-en-v1.5 (English RAG)
]
ifc = [
    # Offline 3D asset build from enriched IFC (scripts/build_3d_assets_ifc.py).
    # Not needed at runtime — generated XKT/JSON are committed.
    "ifcopenshell>=0.8",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["greenflow*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
